--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   color: #888;
 } */
 
-body {
+/* body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #f7f7f7;
@@ -53,10 +53,10 @@ body {
   grid-template-rows: auto 1fr auto;
   gap: 32px;
   height: 100dvh;
-}
+} */
 
 /* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
-.loader {
+/* .loader {
   width: 45px;
   aspect-ratio: 0.75;
   --c: no-repeat linear-gradient(#333 0 0);
@@ -78,4 +78,4 @@ body {
   80% {
     background-position: 0% 50%, 50% 50%, 100% 100%;
   }
-}
+} */
